welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:9: error: value and is not a member of Boolean
    if(day>=1 and day<=5){
              ^